--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "capacitor-share-sheet-extensions",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Dariusz Zabrzeński",
+  "homepage": "https://readdarek.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@capacitor/android": "^4.6.3",
+    "@capacitor/app": "4.1.1",
+    "@capacitor/core": "4.6.3",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "^4.6.3",
+    "@capacitor/keyboard": "4.1.1",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic-native/ionic-webview": "^5.32.1",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -35,6 +43,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
+    "@capacitor/cli": "4.6.3",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
