Post 2 - https://readdarek.com/sharing-content-to-your-app-ios-custom-view/

--- a/ios/App/App.xcodeproj/xcshareddata/xcschemes/Share.xcscheme
+++ b/ios/App/App.xcodeproj/xcshareddata/xcschemes/Share.xcscheme
@@ -57,6 +57,11 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
+      <RemoteRunnable
+         runnableDebuggingMode = "0"
+         BundleIdentifier = "modista.capacitor.share.example"
+         RemotePath = "/var/containers/Bundle/Application/C2FF7EA8-B5DC-423D-9593-AF77F365A489/App.app">
+      </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
